Add bluesky to thank you page

--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -41,44 +41,49 @@
     "*I hope you enjoyed the session. You can follow my work on these platforms:*\n",
     "\n",
     "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
-    "    <div style=\"text-align: center; flex-basis: auto; flex-shrink: 2;\">\n",
-    "        <a href=\"https://stefaniemolin.com/feedback\" target=\"_blank\">\n",
-    "            <img\n",
-    "              width=\"20%\"\n",
-    "              alt=\"Please visit https://stefaniemolin.com/feedback to provide your feedback on this session.\"\n",
-    "              title=\"QR code to submit feedback (leads to https://stefaniemolin.com/feedback)\"\n",
-    "              class=\"qr-code\"\n",
-    "              src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\"\n",
-    "            />\n",
-    "          </a>\n",
-    "    </div>\n",
-    "\n",
-    "  <div style=\"flex-basis: 45em; flex-grow: 2; font-size: 80%;\">\n",
-    "    <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
-    "      <i class=\"fa fa-globe fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
+    "  <div style=\"text-align: center; flex-basis: auto; flex-shrink: 2; margin-bottom: -25px\">\n",
+    "    <a href=\"https://stefaniemolin.com/feedback\" target=\"_blank\">\n",
+    "      <img\n",
+    "        width=\"20%\"\n",
+    "        alt=\"Please visit https://stefaniemolin.com/feedback to provide your feedback on this session.\"\n",
+    "        title=\"QR code to submit feedback (leads to https://stefaniemolin.com/feedback)\"\n",
+    "        class=\"qr-code\"\n",
+    "        src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\"\n",
+    "      />\n",
+    "    </a>\n",
+    "  </div>\n",
+    "  <div style=\"flex-basis: 45em; flex-grow: 2; font-size: 75%;\">\n",
+    "    <div style=\"display: flex\">\n",
+    "      <i class=\"fa fa-globe fa-2x fa-fw\" style=\"padding-right: 4px; margin: auto 0;\"></i>\n",
     "      <a href=\"https://stefaniemolin.com\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\">\n",
     "        stefaniemolin.com\n",
     "      </a>\n",
     "    </div>\n",
-    "  <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
-    "    <i class=\"fab fa-github fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
-    "    <a href=\"https://github.com/stefmolin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
-    "      github.com/stefmolin\n",
-    "    </a>\n",
+    "    <div style=\"display: flex\">\n",
+    "      <i class=\"fab fa-github fa-2x fa-fw\" style=\"padding-right: 4px; margin: auto 0;\"></i>\n",
+    "      <a href=\"https://github.com/stefmolin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
+    "        github.com/stefmolin\n",
+    "      </a>\n",
+    "    </div>\n",
+    "    <div style=\"display: flex\">\n",
+    "      <i class=\"fa-brands fa-bluesky fa-2x fa-fw\" style=\"padding-right: 4px; margin: auto 0;\"></i>\n",
+    "      <a href=\"https://bsky.app/profile/stefaniemolin.com\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
+    "        bsky.app/profile/stefaniemolin.com\n",
+    "      </a>\n",
+    "    </div>\n",
+    "    <div style=\"display: flex\">\n",
+    "      <i class=\"fab fa-twitter fa-2x fa-fw\" style=\"padding-right: 4px; margin: auto 0;\"></i>\n",
+    "      <a href=\"https://x.com/StefanieMolin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
+    "        x.com/StefanieMolin\n",
+    "      </a>\n",
+    "    </div>\n",
+    "    <div style=\"display: flex\">\n",
+    "      <i class=\"fab fa-linkedin-in fa-2x fa-fw\" style=\"padding-right: 4px; margin: auto 0;\"></i>\n",
+    "      <a href=\"https://linkedin.com/in/stefanie-molin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
+    "        linkedin.com/in/stefanie-molin\n",
+    "      </a>\n",
+    "    </div>\n",
     "  </div>\n",
-    "  <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
-    "    <i class=\"fab fa-twitter fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
-    "    <a href=\"https://twitter.com/StefanieMolin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
-    "      twitter.com/StefanieMolin\n",
-    "    </a>\n",
-    "  </div>\n",
-    "  <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
-    "    <i class=\"fab fa-linkedin-in fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
-    "    <a href=\"https://linkedin.com/in/stefanie-molin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
-    "      linkedin.com/in/stefanie-molin\n",
-    "    </a>\n",
-    "  </div>\n",
-    "</div>\n",
     "</div>"
    ]
   }
