Update NASA resource links

--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -230,7 +230,7 @@
     "tags": []
    },
    "source": [
-    "*Source: [NASA's Open Data Portal](https://data.nasa.gov/Space-Science/Meteorite-Landings/gh4g-9sfh)*"
+    "*Source: [NASA's Open Data Portal](https://data.nasa.gov/dataset/meteorite-landings)*"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "source": [
     "### Using data from an API\n",
     "\n",
-    "Collect the data from [NASA's Open Data Portal](https://data.nasa.gov/Space-Science/Meteorite-Landings/gh4g-9sfh) using the Socrata Open Data API (SODA) with the `requests` library:"
+    "Collect the data from [NASA's Open Data Portal](https://data.nasa.gov/dataset/meteorite-landings-api/resource/a2365f19-c949-4e70-ba13-e5b6a146fc19) using the Socrata Open Data API (SODA) with the `requests` library:"
    ]
   },
   {
@@ -473,7 +473,7 @@
     "import requests\n",
     "\n",
     "response = requests.get(\n",
-    "    'https://data.nasa.gov/resource/gh4g-9sfh.json',\n",
+    "    'https://data.nasa.gov/docs/legacy/meteorite_landings/gh4g-9sfh.json',\n",
     "    params={'$limit': 50_000}\n",
     ")\n",
     "\n",
@@ -2623,7 +2623,7 @@
     "tags": []
    },
    "source": [
-    "[The Meteoritical Society states](https://www.lpi.usra.edu/meteor/metbull.php?code=56147) that \"relict meteorites are composed mostly of terrestrial minerals, but are thought to have once been meteorites.\" What proportion of the data are relict meteorites? Let's verify these were all found versus observed falling:"
+    "[The Meteoritical Society states](https://www.lpi.usra.edu/meteor/metbull.php?sea=Relict+OC&sfor=types&stype=exact) that a \"relict meteorite is dominantly composed of secondary minerals, and is thought to have once been a meteorite.\" What proportion of the data are relict meteorites? Let's verify these were all found versus observed falling:"
    ]
   },
   {
@@ -3555,7 +3555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
