Move away from using GitHub raw links after having lots of issues this week

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -47,7 +47,7 @@
     "So far, we have focused a lot on summarizing the data using statistics. However, summary statistics are not enough to understand the distribution &ndash; there are many possible distributions for a given set of summary statistics. Data visualization is necessary to truly understand the distribution:\n",
     "\n",
     "<div style=\"text-align: center; margin-top: -10px;\">\n",
-    "<img width=\"50%\" src=\"https://raw.githubusercontent.com/stefmolin/data-morph/main/docs/_static/panda-to-star-eased.gif\" alt=\"Data Morph: panda to star\" style=\"min-width: 300px; margin-bottom: -10px;\"/>\n",
+    "<img width=\"50%\" src=\"https://stefaniemolin.com/data-morph/stable/_images/panda-to-star-eased.gif\" alt=\"Data Morph: panda to star\" style=\"min-width: 300px; margin-bottom: -10px;\"/>\n",
     "<div style=\"margin: auto 26%;\"><small><em>A set of points forming a panda can also form a star without any significant changes to the summary statistics displayed above. (source: <a href=\"https://stefaniemolin.com/data-morph/stable/index.html\">Data Morph</a>)</em></small></div>\n",
     "</div>"
    ]
