--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -48,7 +48,7 @@
     "        alt=\"Please visit https://stefaniemolin.com/feedback to provide your feedback on this session.\"\n",
     "        title=\"QR code to submit feedback (leads to https://stefaniemolin.com/feedback)\"\n",
     "        class=\"qr-code\"\n",
-    "        src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\"\n",
+    "        src=\"media/qr-code.png\"\n",
     "      />\n",
     "    </a>\n",
     "  </div>\n",
