Add last raw image

--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -17,7 +17,7 @@
     "*All examples herein were developed exclusively for this workshop &ndash; check out [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) and my [Beyond the Basics: Data Visualization in Python](https://stefaniemolin.com/workshops/python-data-viz-workshop/) workshop for more.*\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\" style=\"min-width: 200px\">\n",
+    "    <img width=\"20%\" src=\"media/pandas_drawing.png\" style=\"min-width: 200px\">\n",
     "    <div><small>\n",
     "        <a href=\"https://stefaniemolin.com\">stefaniemolin.com</a>\n",
     "    </small></div>\n",
